# discussion-patterns

./: .gitignore  Dockerfile  article_metrics.py  build-wikiconv-it.sh  docker-compose.yaml  pyproject.toml
articles/: __main__.py  calculate.py  calculate_metrics.py  documentation_talkpage_metrics.md  generate_splitting_dataset_script.py  metric_controller.py  outputter.py  utils.py
articles/articlemetrics/: __init__.py  actions_type.py  metric.py  mutual_chain.py
articles/database/: metric_db.py  outputter.py
articles/talkpage_metrics/: __init__.py  actions_type.py  metric.py  metric_action_type.py  metric_controller.py  metric_db.py  metric_discussion_depth.py  metric_toxicity.py  metric_user_involved.py  metric_vandalism.py  mutual_chain.py  new_users.py  new_users_by_month.py  user_activity.py
visual/: plot_controversy.py  plot_line_metrics.py  plot_table.py  plot_table_summary_pages.py
