[tool.poetry]
name = "discussion-patterns"
version = "0.1.0"
description = ""
authors = ["Francesco Bozzo <francesco.bozzo.99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
pandas = "^1.1.4"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
