[tool.poetry]
name = "discussion-patterns"
version = "0.1.0"
description = ""
authors = ["Francesco Bozzo <francesco.bozzo.99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
pandas = "^1.1.4"
matplotlib = "^3.3.2"
networkx = "^2.5"
pymongo = "^3.11.0"
tqdm = "^4.52.0"
sshtunnel = "^0.3.1"
pygraphviz = "^1.7"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
jupytext = "^1.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
